# Simulations

./: Ejercicio1.py  Ejercicio2.py  ejercicio1_figuras_geometricas.py  ejercicio2_vectores_fisicos.py  ejercicio3_cinematica.py  ejercicio4_fuerzas.py
python/Structure/: Makefile  README.md  requirements.txt
python/Structure/problemas/: factor_primo.py  fibonacci.py  multiplos.py
python/Structure/tests/: test_decorador.py  test_factor_primo.py  test_fibonacci.py  test_multiplos.py  tests_operaciones.py
python/Structure/utilidades/: decorador.py  graficas.py  operaciones.py
python/algoritmos/: ordenamiento.py  ordenamiento_con_decoradores.py
python/architecture patterns/: README.md  event_driven_multihilo.py  guia_arquitecturas.md
python/basics/abstraccion/: ejemplo1_ecuacion_estado.py  ejemplo2_sensor_abstracto.py
python/basics/acoplamiento/: ejemplo1_acoplamiento_tight_vs_loose.py  ejemplo2_inyeccion_dependencias.py
python/basics/agregacion/: ejemplo1_sistema_estelar.py  ejemplo2_laboratorio.py
python/basics/args_kwargs/: args_kwargs.py
python/basics/cohesion/: ejemplo1_alta_vs_baja_cohesion.py  ejemplo2_simulador_particulas.py
python/basics/composicion/: ejemplo1_atomo.py  (+1 more)
python/basics/first_simulation/: README.md  pyproject.toml
python/basics/first_simulation/src/: monte_carlo_pi.py
python/configuration/: GUIA_CONFIGURACION.md  app_json.py  app_yaml.py  config.json  config.yaml
python/design patterns/: README.md
python/linting/: GUIA_LINTING.md  ejemplos.py
python/testing/: GUIA_DE_TESTING.md  test_sorting_unittest.py  tests.py
(+42 files in other folders)
