[project]
name = "pi-estimation"
version = "0.1.0"
description = ""
authors = [
    {name = "jbalsellso",email = "jorgebalsells@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.0",
]

[tool.poetry]
packages = [{include = "first_simulation", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
